--- a/Messenger App/app/src/main/res/values/colors.xml
+++ b/Messenger App/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_gray">#505050</color>
+    <color name="textview_text">#A0A0A0</color>
+    <color name="textview_background">#F3F6FF</color>
+    <color name="blue">#5479F1</color>
+    <color name="received_message">#F4F6FF</color>
 </resources>
