--- a/Messenger App/app/src/main/res/layout/received_message_cell.xml
+++ b/Messenger App/app/src/main/res/layout/received_message_cell.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvReceivedMessageCellMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/received_message_background"
         android:padding="16dp"
         android:textColor="@color/dark_gray"
