--- a/Messenger App/app/src/main/res/values/colors.xml
+++ b/Messenger App/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="textview_text">#A0A0A0</color>
     <color name="textview_background">#F3F6FF</color>
     <color name="blue">#5479F1</color>
+    <color name="purple">#9283F7</color>
     <color name="received_message">#F4F6FF</color>
 </resources>
