--- a/Messenger App/app/src/main/res/layout/fragment_recent_chats.xml
+++ b/Messenger App/app/src/main/res/layout/fragment_recent_chats.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecentChatsFragment">
+    tools:context=".recentchats.RecentChatsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvRecentChats"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
