--- a/Messenger App/app/src/main/res/layout/activity_chat.xml
+++ b/Messenger App/app/src/main/res/layout/activity_chat.xml
@@ -26,6 +26,7 @@
 
 
             <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/chatToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -53,7 +54,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="?attr/colorOnPrimary"
-                        android:textSize="10dp"
+                        android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="@+id/imgChatAvatar"
                         app:layout_constraintStart_toStartOf="@+id/tvChatPerson"
                         app:layout_constraintTop_toBottomOf="@+id/tvChatPerson"
