--- a/Messenger App/app/src/main/res/layout/fragment_settings.xml
+++ b/Messenger App/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsFragment" >
+    tools:context=".main.settings.SettingsFragment" >
 
     <Button
         android:id="@+id/btSettingsUpdate"
