--- a/Messenger App/app/src/main/res/layout/fragment_settings.xml
+++ b/Messenger App/app/src/main/res/layout/fragment_settings.xml
@@ -7,15 +7,15 @@
     tools:context=".main.settings.SettingsFragment" >
 
     <Button
-        android:id="@+id/btSettingsUpdate"
+        android:id="@+id/btnSettingsUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:backgroundTint="?attr/colorPrimary"
         android:text="@string/button_update"
-        app:layout_constraintEnd_toEndOf="@+id/etSettingsPassword"
-        app:layout_constraintStart_toStartOf="@+id/etSettingsPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etSettingsPassword" />
+        app:layout_constraintEnd_toEndOf="@+id/etSettingsOccupation"
+        app:layout_constraintStart_toStartOf="@+id/etSettingsOccupation"
+        app:layout_constraintTop_toBottomOf="@+id/etSettingsOccupation" />
 
     <EditText
         android:id="@+id/etSettingsNickname"
@@ -35,13 +35,13 @@
         app:layout_constraintTop_toBottomOf="@+id/imgSettingsAvatar" />
 
     <EditText
-        android:id="@+id/etSettingsPassword"
+        android:id="@+id/etSettingsOccupation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/textview_background"
         android:ems="12"
-        android:hint="@string/hint_password"
+        android:hint="@string/hint_edittext_what_i_do"
         android:inputType="textPassword"
         android:paddingHorizontal="16dp"
         android:paddingVertical="8dp"
@@ -63,15 +63,15 @@
         app:layout_constraintVertical_bias="0.2" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btSettingsSignOut"
+        android:id="@+id/btnSettingsSignOut"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/button_sign_out"
         android:textColor="@color/dark_gray"
-        app:layout_constraintEnd_toEndOf="@+id/btSettingsUpdate"
-        app:layout_constraintStart_toStartOf="@+id/btSettingsUpdate"
-        app:layout_constraintTop_toBottomOf="@+id/btSettingsUpdate"
+        app:layout_constraintEnd_toEndOf="@+id/btnSettingsUpdate"
+        app:layout_constraintStart_toStartOf="@+id/btnSettingsUpdate"
+        app:layout_constraintTop_toBottomOf="@+id/btnSettingsUpdate"
         app:strokeColor="@color/dark_gray" />
 </androidx.constraintlayout.widget.ConstraintLayout>
