--- a/Messenger App/app/src/main/res/layout/recent_chat_cell.xml
+++ b/Messenger App/app/src/main/res/layout/recent_chat_cell.xml
@@ -11,9 +11,9 @@
         android:layout_height="@dimen/recent_chat_avatar"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:src="@drawable/avatar_image_placeholder"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/avatar_image_placeholder" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvRecentChatPerson"
@@ -39,8 +39,8 @@
         tools:text="TextView" />
 
     <TextView
-        style="@style/Theme.MessengerApp.TimeCodeTextView"
         android:id="@+id/tvRecentChatTime"
+        style="@style/Theme.MessengerApp.TimeCodeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
