--- a/Messenger App/app/src/main/res/layout/activity_sign_up.xml
+++ b/Messenger App/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="@+id/etSignUpPassword"
         app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="@+id/etSignUpPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etSignUpWhatIDo" />
+        app:layout_constraintTop_toBottomOf="@+id/etSignUpOccupation" />
 
     <EditText
         android:id="@+id/etSignUpNickname"
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etSignUpNickname" />
 
     <EditText
-        android:id="@+id/etSignUpWhatIDo"
+        android:id="@+id/etSignUpOccupation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
