--- a/Messenger App/app/src/main/res/values/dimens.xml
+++ b/Messenger App/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="recent_chat_message_text">14sp</dimen>
     <dimen name="message_text">18sp</dimen>
     <dimen name="chat_message_corner_radius">30dp</dimen>
+    <dimen name="chat_action_bar_size">80dp</dimen>
 </resources>
