--- a/Messenger App/app/src/main/res/layout/contact_cell.xml
+++ b/Messenger App/app/src/main/res/layout/contact_cell.xml
@@ -11,9 +11,9 @@
         android:layout_height="@dimen/recent_chat_avatar"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:src="@drawable/avatar_image_placeholder"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/avatar_image_placeholder" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvContactName"
